# BlackHoleVisualizer

./: CMakeLists.txt  LICENSE  README.md
include/utils/: Math.h
shaders/: composite.frag
src/physics/: KerrBlackHole.cpp  RayTracer.cpp
